# TopicQnA-Backend

./: .env.sample  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: database.py  dependencies.py  main.py
app/models/: __init__.py  question.py  topic.py
app/routers/: questions.py  topics.py
app/schemas/: question.py  topic.py
